Adds application insights

--- a/HealthPassportApi/appsettings.json
+++ b/HealthPassportApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "35f4809c-ce0e-4dbf-a107-3c972f0a492b"
+  }
 }
