Add database schema for DiseaseDescription

--- a/HealthPassportApi/appsettings.json
+++ b/HealthPassportApi/appsettings.json
@@ -6,6 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "HealthDbConnection": "Data Source=EPCZPRAW0231;Initial Catalog=eu-vs-virus;Integrated Security=True"
+  },
   "AllowedHosts": "*",
   "ApplicationInsights": {
     "InstrumentationKey": "35f4809c-ce0e-4dbf-a107-3c972f0a492b"
